2005-12-10  Dalibor Topic  <robilad@kaffe.org>

	* libraries/clib/native/java_lang_VMProcess.c
	(Java_java_lang_VMProcess_nativeSpawn): Spawn in the correct
	dir, if one is given.

        Reported by:  Alejandro Mery  <amery@geeks.cl>

2005-12-10  Guilhem Lavaux  <guilhem@kaffe.org>

	* test/regression/TestSerialFields.java,
	test/regression/TestSerialPersistent.java,
	test/regression/TestSerialVersions.java: Fixed class ordering
	problem. Changed output accordingly. We expect an
	InvalidClassException in Duplicates & Overlap now.

	* libraries/javalib/external/classpath/java/io/ObjectOutputStream.java,
	libraries/javalib/external/classpath/java/io/ObjectStreamClass.java:
	Temporary patch before synchronizing with classpath.

2005-12-10  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	* FAQ/FAQ.classlibrary-compile: Updated the description of ecj.

2005-12-08  Guilhem Lavaux  <guilhem@kaffe.org>

	* developers/update-vm-list: Sort files before adding them to
	Makefile.am

	* configure.ac: Fixed a small problem when a precise ecj is
	specified in --with-ecj.
	
	* configure,
	libraries/javalib/Makefile.am,
	libraries/javalib/Makefile.in,
	libraries/javalib/external/classpath/Makefile.in,
	libraries/javalib/external/classpath/aclocal.m4,
	libraries/javalib/external/classpath/configure,
	libraries/javalib/external/classpath/examples/Makefile.in,
	libraries/javalib/external/classpath/external/Makefile.in,
	libraries/javalib/external/classpath/external/sax/Makefile.in,
	libraries/javalib/external/classpath/external/w3c_dom/Makefile.in,
	libraries/javalib/external/classpath/include/Makefile.in,
	libraries/javalib/external/classpath/lib/Makefile.in,
	libraries/javalib/external/classpath/native/Makefile.in,
	libraries/javalib/external/classpath/native/fdlibm/Makefile.in,
	libraries/javalib/external/classpath/native/jawt/Makefile.in,
	libraries/javalib/external/classpath/native/jni/Makefile.in,
	libraries/javalib/external/classpath/native/jni/classpath/Makefile.in,