@@ -1,3 +1,14 @@
+2005-12-11  Dalibor Topic  <robilad@kaffe.org>
+
+	* libraries/javalib/Makefile.am.in:
+	(install-hook) Renamed to 
+	(install-data-local), so that it gets picked up by automake.
+	Added a dependency on installdirs to make sure its ran after the 
+	directories are created.
+	(uninstall-local) Added.
+
+        Reported by:  Alejandro Mery  <amery@geeks.cl>
+
 2005-12-10  Dalibor Topic  <robilad@kaffe.org>
 
 	* libraries/clib/native/java_lang_VMProcess.c
